# obscurify

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  clientEmbed.js  example.conf  iframe.html  obsc.conf
src/: authstate.rs  conf.rs  main.rs  serve.rs  spotify.rs
