[package]
name = "obscurify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
base64 = "0.21.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }

