[package]
name = "obscurify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = { version = "0.6", features = ["tls-rustls", "tls-openssl"] }
base64 = "0.21.0"
axum = "0.7"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "refs/pull/2060/head", features = [
    "blocking",
    "json",
] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
